Add custom map marker icons, pathfinding improvements + audit fixes
Features:
- Custom map marker images: pick ore/rock/material icons for PMarkers
  via searchable icon picker (MapFile v2 serialization, backward compat)
- Minimap pathfinding: new setting routes minimap clicks through A*
- Long-distance pathfinding: auto-chains hops beyond 40-tile range
- Continuous walking + pathfinding: hold-left-click with A* obstacle avoidance

Bug fixes:
- Fix 5 compile errors: getFirst() -> get(0) (Java 21 API on Java 15 target)
- Fix GItem.spr() side effects: extract auto-drop to validateAutoDrop()
- Fix Inventory wmap thread safety: HashMap -> ConcurrentHashMap
- Fix InterruptedException swallowing in 18 bot files (34 catch blocks)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>